--- a/index.html
+++ b/index.html
@@ -4,11 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
     <title>Rest Countries Api</title>
 </head>
 <body>
-    
+    <header>
+        <div class="header-wrapper flex">
+            <div class="logo">
+                <h2 class="logo-title">Where in the World?</h2>
+            </div>
+
+            <div class="theme-toggler">
+                <a href="#" class="theme-btn"><i class="fa-regular fa-moon"></i>Dark Mode</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="search-filter flex">
+                <div class="search-input">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <input type="text" placeholder="Search for a Country" id="search">
+                </div>
+
+                <div class="dropdown" id="filter">
+					Filter by Region
+					<i class="fas fa-chevron-down"></i>
+					<ul>
+						<li>All</li>
+						<li>Africa</li>
+						<li>Americas</li>
+						<li>Asia</li>
+						<li>Europe</li>
+						<li>Oceania</li>
+					</ul>
+				</div>
+            </div>
+
+            <div class="country-lists">
+                <!-- <div class="country-card">
+                    <div class="image">
+                        <img src="" alt="country flag">
+                    </div>
+                    <div class="info">
+                        <h2 class="country-name">Germany</h2>
+                        <p class="population">Population: 81,770,900</p>
+                        <p class="region">Region: Europe</p>
+                        <p class="capital">Capital: Berlin</p>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+
+        <div class="modal" id="modal">
+            <div class="modal-container">
+                <div class="modal-close-btn">
+                    <button class="close-btn"><i class="fa-solid fa-arrow-left"></i>Back</button>
+                </div>
+
+                <div class="modal-content">
+                    
+                </div>
+            </div>
+
+        </div>
+    </main>
 
 
     <script src="app.js"></script>
