added search and filter styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rest Countries Api</title>
 </head>
 <body>
-    <header>
+    <header class="bs">
         <div class="header-wrapper flex">
             <div class="logo">
                 <h2 class="logo-title">Where in the World?</h2>
@@ -23,15 +23,14 @@
     <main>
         <div class="container">
             <div class="search-filter flex">
-                <div class="search-input">
+                <div class="search-input bs br">
                     <i class="fa-solid fa-magnifying-glass"></i>
                     <input type="text" placeholder="Search for a Country" id="search">
                 </div>
 
                 <div class="dropdown" id="filter">
-					Filter by Region
-					<i class="fas fa-chevron-down"></i>
-					<ul>
+					<h3 class="filter-title bs br">Filter by Region <i class="fas fa-chevron-down"></i></h3>
+					<ul class="bs br">
 						<li>All</li>
 						<li>Africa</li>
 						<li>Americas</li>
