added filter by region function and styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Rest Countries Api</title>
 </head>
 <body>
-    <header class="bs">
+    <!-- Header Section -->
+    <header class="bs"> 
         <div class="header-wrapper flex">
             <div class="logo">
                 <h2 class="logo-title">Where in the World?</h2>
@@ -22,6 +23,9 @@
     </header>
     <main>
         <div class="container">
+
+            <!-- Search and Filter Section -->
+
             <div class="search-filter flex">
                 <div class="search-input bs br">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -41,6 +45,8 @@
 				</div>
             </div>
 
+            <!-- Country List -->
+
             <div class="country-lists">
                 <!-- <div class="country-card">
                     <div class="image">
@@ -55,6 +61,8 @@
                 </div> -->
             </div>
         </div>
+
+        <!-- Modal to show individual Country Details -->
 
         <div class="modal" id="modal">
             <div class="modal-container">
