--- a/index.html
+++ b/index.html
@@ -48,17 +48,7 @@
             <!-- Country List -->
 
             <div class="country-lists">
-                <!-- <div class="country-card">
-                    <div class="image">
-                        <img src="" alt="country flag">
-                    </div>
-                    <div class="info">
-                        <h2 class="country-name">Germany</h2>
-                        <p class="population">Population: 81,770,900</p>
-                        <p class="region">Region: Europe</p>
-                        <p class="capital">Capital: Berlin</p>
-                    </div>
-                </div> -->
+                
             </div>
         </div>
 
@@ -67,7 +57,7 @@
         <div class="modal" id="modal">
             <div class="modal-container">
                 <div class="modal-close-btn">
-                    <button class="close-btn"><i class="fa-solid fa-arrow-left"></i>Back</button>
+                    <button class="close-btn bs br"><i class="fa-solid fa-arrow-left"></i>Back</button>
                 </div>
 
                 <div class="modal-content">
