added theme switcher and media queries

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="dropdown" id="filter">
-					<h3 class="filter-title bs br">Filter by Region <i class="fas fa-chevron-down"></i></h3>
+					<h3 class="filter-title bs br"><span>Filter by Region</span><i class="fas fa-chevron-down"></i></h3>
 					<ul class="bs br">
 						<li>All</li>
 						<li>Africa</li>
